--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -6,7 +6,7 @@
       {% for message in messages %}
         
         <li class="list-group-item">
-          <a href="/messages/{{ message.id }}" class="message-link"/>
+          <a href="/messages/{{ message.id }}" class="message-link">
 
           <a href="/users/{{ user.id }}">
             <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
@@ -16,6 +16,12 @@
             <a href="/users/{{ user.id }}">@{{ user.username }}</a>
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
             <p>{{ message.text }}</p>
+
+            <form action="/users/{{user.id}}/likes" method="POST">
+              <input type="hidden" name="message_id" value="{{message.id}}">
+              <button class="btn like_btn btn-info"><i class="fas fa-thumbs-up"></i>
+              </button>
+            </form>
           </div>
         </li>
 
