--- a/templates/home.html
+++ b/templates/home.html
@@ -1,33 +1,40 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="row">
-
   <aside class="col-md-4 col-lg-3 col-sm-12" id="home-aside">
     <div class="card user-card">
       <div>
-        <div class="image-wrapper">
-        </div>
+        <div class="image-wrapper"></div>
         <a href="/users/{{ g.user.id }}" class="card-link">
-          <img src="{{ g.user.image_url }}" alt="Image for {{ g.user.username }}" class="card-image">
+          <img
+            src="{{ g.user.image_url }}"
+            alt="Image for {{ g.user.username }}"
+            class="card-image"
+          />
           <p>@{{ g.user.username }}</p>
         </a>
         <ul class="user-stats nav nav-pills">
           <li class="stat">
             <p class="small">Messages</p>
             <h4>
-              <a href="/users/{{ g.user.id }}">{{ g.user.messages | length }}</a>
+              <a href="/users/{{ g.user.id }}">{{
+                g.user.messages | length
+              }}</a>
             </h4>
           </li>
           <li class="stat">
             <p class="small">Following</p>
             <h4>
-              <a href="/users/{{ g.user.id }}/following">{{ g.user.following | length }}</a>
+              <a href="/users/{{ g.user.id }}/following">{{
+                g.user.following | length
+              }}</a>
             </h4>
           </li>
           <li class="stat">
             <p class="small">Followers</p>
             <h4>
-              <a href="/users/{{ g.user.id }}/followers">{{ g.user.followers | length }}</a>
+              <a href="/users/{{ g.user.id }}/followers">{{
+                g.user.followers | length
+              }}</a>
             </h4>
           </li>
         </ul>
@@ -41,22 +48,36 @@
       <li class="list-group-item">
         <!-- <a href="/messages/{{ msg.id  }}" class="message-link" /> -->
         <a href="/users/{{ msg.user.id }}">
-          <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
+          <img src="{{ msg.user.image_url }}" alt="" class="timeline-image" />
         </a>
         <div class="message-area">
           <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
-          <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
+          <span class="text-muted">{{
+            msg.timestamp.strftime("%d %B %Y")
+          }}</span>
           <p>{{ msg.text }}</p>
-          <p>
-            <form method="POST" formaction="/users/{{msg.user.id}}/likes">
-              <button type="button" class="btn btn-outline-warning m-auto">Like</button>
-            </form>
-          </p>
+
+          {%if msg in g.user.liked_messages %}
+          <form action="/users/stop-unlike/{{ msg.id }}" method="POST">
+            <input type="hidden" name="message_id" value="{{ msg.id }}" />
+            <button class="btn like_btn btn-info">
+              <i class="fas fa-thumbs-up"></i>
+            </button>
+          </form>
+          {%else%}
+
+          <form action="/users/{{ user.id }}/likes" method="POST">
+            <input type="hidden" name="message_id" value="{{ msg.id }}" />
+            <button class="btn like_btn btn-info">
+              <i class="far fa-thumbs-up"></i>
+            </button>
+          </form>
+
+          {%endif%}
         </div>
       </li>
       {% endfor %}
     </ul>
   </div>
-
 </div>
 {% endblock %}
