--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,9 +1,8 @@
 
 .like_btn{
-  position: absolute;
   z-index: 1;
-  right: 20px;
-  bottom: 6px;
+  right: 0;
+  bottom: 0;
 }
 
 /* ====================== General */
@@ -282,6 +281,7 @@ nav + .container {
   left: 0;
   right: 0;
   z-index: 1;
+  height: 50%
 }
 
 #messages .list-group-item a:not(.message-link) {
