--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -20,6 +20,7 @@
 
         <button class="btn btn-primary btn-block btn-lg">Log in</button>
       </form>
+        <a href="/forgotpassword">Forgot Password</a>
     </div>
   </div>
 
